# libaudioresource

./: CMakeLists.txt  COPYING.LGPL  README
include/: audioresource.h
pkgconfig/: audioresource.pc.in
rpm/: libaudioresource.spec
src/: audioresource.c
